fix: modal top/left and z-index

--- a/src/components/Modal/index.module.css
+++ b/src/components/Modal/index.module.css
@@ -6,6 +6,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    top: 0;
+    left: 0;
+    z-index: 9999;
 }
 
 .modal {
@@ -31,6 +34,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    width: 100%;
 }
 
 .modalHeader {
